hw_8 without pagination